--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "type": "module",
   "scripts": {
-    "test": "--test"
+    "test": "npx jest"
   },
   "author": "Yrii Danilov",
   "license": "ISC",
@@ -19,6 +19,7 @@
   "devDependencies": {
     "eslint": "^8.42.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.27.5"
+    "eslint-plugin-import": "^2.27.5",
+    "jest": "^29.5.0"
   }
 }
