--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "author": "Yrii Danilov",
   "license": "ISC",
   "dependencies": {
+    "@jest/globals": "^29.5.0",
+    "@types/jest": "^29.5.2",
     "commander": "^10.0.1",
     "lodash": "^4.17.21"
   },
