--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@jest/globals": "^29.5.0",
     "@types/jest": "^29.5.2",
     "commander": "^10.0.1",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "yaml": "^2.3.1"
   },
   "devDependencies": {
     "eslint": "^8.42.0",
